# P-G_excel_AI_chatbot

./: .gitignore  ZEABUR_DEPLOYMENT.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: chat.py  etl.py  file_deletion.py  files.py  unified_etl.py
backend/app/config/: vanna_prompts.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: chat.py  dataset.py  etl.py  inventory.py  unified_etl.py  user.py
backend/app/repositories/: chat_repository.py  dataset_repository.py  etl_repository.py  file_repository.py  inventory_repository.py  supabase_base.py  user_repository.py
backend/app/services/: chat_service.py  etl_service.py  file_deletion.py  file_manager.py  file_service.py  query_service.py  unified_etl_service.py  vanna_service.py  vanna_training.py
backend/app/utils/: serialization.py
backend/tests/: test_etl_service.py
backend/vanna_db/excel-chatbot/: chroma.sqlite3
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/chat/: ChatInterface.tsx  ChatToolbar.tsx  CollapsibleChatHistory.tsx  CollapsibleQueryDetails.tsx  DatasetSelector.tsx  index.ts
frontend/src/components/file-manager/: DeleteConfirmDialog.tsx  FileCard.tsx  SheetETLControl.tsx  index.ts
frontend/src/components/layout/: CollapsibleSidebar.tsx  DashboardLayout.tsx  Sidebar.tsx
frontend/src/components/navigation/: PageHeader.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  checkbox.tsx  dialog.tsx  progress.tsx  select.tsx  stepper.tsx  textarea.tsx
frontend/src/components/upload/: ConfirmationStep.tsx  CountrySelector.tsx  FileUploader.tsx  SheetSelector.tsx  UploadWizard.tsx  ValidationStep.tsx  index.ts
frontend/src/hooks/: useChat.ts  useChatLayout.ts  useETL.ts  useFileManager.ts  useTheme.ts  useUploadWizard.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: AnalyticsPage.tsx  ChatbotPage.tsx  ExcelPage.tsx
frontend/src/types/: chat.ts
